syntax="proto3";

package pb;

message GetLoggerRequest {
    string ServiceName = 1;
    string Level = 2;
}