syntax="proto3";

package domain;

option go_package = "github.com/yogyrahmawan/logger_service/src/domain";
message LoggerResponse {
	string Status = 1;
}
