syntax="proto3";

package pb;

import "logger.proto";
import "logger_response.proto";
import "logger_responses.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service LoggerService {
	rpc SendLog(stream LoggerMessage) returns (LoggerResponse);
	rpc GetLog(google.protobuf.Empty) returns (LoggerResponsesMessage) {
	  option(google.api.http) = {
	  	get: "/api/v1/logs"
		additional_bindings {
			get: "/api/v1/logs/{service_name}"	
		}
		additional_bindings {
			get: "/api/v1/logs/{service_name}/level/{level}"
		}
		additional_bindings {	
			get: "/api/v1/logs/{service_name}/text/{text}"
		}
 	  };	
	};
}
